better ui visuals and animations